@@ -211,18 +211,20 @@ TimerSeconds=60
 ScoreConnectedToMusicWheel=1
 
 [ScreenSelectCourse]
+ExplanationX=132
+ExplanationY=68
 BannerFrameX=160
-BannerFrameY=118
+BannerFrameY=158
 BannerX=150
-BannerY=132
+BannerY=172
 BannerWidth=286
 BannerHeight=92
 StagesX=58
-StagesY=74
+StagesY=114
 TimeX=192
-TimeY=74
+TimeY=114
 ContentsX=160
-ContentsY=320
+ContentsY=336
 WheelX=480
 WheelY=248
 ScoreP1X=520
@@ -302,8 +304,8 @@ StageY=64
 GradeP1X=94
 GradeP2X=546
 GradeY=100
-PercentBaseP1X=130
-PercentBaseP2X=582
+PercentBaseP1X=120
+PercentBaseP2X=572
 PercentBaseY=134
 JudgeLabelsX=320
 PerfectP1X=230
@@ -538,7 +540,7 @@ StageColor5=0.4,0.4,0.9,1	// light blue
 StageColorFinal=1.0,0.1,0.1,1	// red
 StageColorExtra1=1.0,1,0.3,1	// yellow
 StageColorExtra2=1.0,1,0.3,1	// yellow
-StageColorOni=1.0,0.1,0.1,1	// red
+StageColorOni=0.3,1.0,0.3,1	// green
 StageTextDemo=Demo
 StageTextFinal=Final
 StageTextExtra1=Extra
